--- a/templates/optimizely-add-update-form.html.twig
+++ b/templates/optimizely-add-update-form.html.twig
@@ -6,11 +6,11 @@
   <p>In order to use this module, you'll need an <a href="http://optimize.ly/OZRdc0">Optimizely account</a>. A Free 30-day trial account is available.</p>
 
   <ul>
-    <li><strong>Add the account ID to the <a href="/admin/config/system/optimizely/settings">Account Info</a> settings page to be able to enable this entry</strong>.</li>
+    <li><strong>Add the account ID to the <a href="{{ url('optimizely.settings') }}">Account Info</a> settings page to be able to enable this entry</strong>.</li>
   </ul>
   
   <p>The default Project javascript (js) file (snippet) uses the Optimizely account ID for its file name. The "Default" / first project entry in the
-  <a href="/admin/config/system/optimizely">Project Listing</a> page uses the account ID value for the Project Code setting. The Default project entry targets all pages sitewide with its initial settings. Enabling this entry will result in the initial Optimizely experiments running sitewide.</p>
+  <a href="{{ url('optimizely.listing') }}">Project Listing</a> page uses the account ID value for the Project Code setting. The Default project entry targets all pages sitewide with its initial settings. Enabling this entry will result in the initial Optimizely experiments running sitewide.</p>
 
 {% endif %}
 
